--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "project",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "10.0.0"
+  },
   "scripts": {
     "start": "node ./bin/www"
   },
